# grew

./: .gitignore  .merlin  AUTHORS  CHANGES.md  Makefile  Makefile.in  Makefile_dev  README.md  _tags  configure  dune-project  grew.opam  myocamlbuild.ml  opam
config/: Makefile.in  configure.ac
opam/: descr  opam
packaging/opam/: descr  opam
src/: Makefile.in  dune  grew.glade  grew_args.ml  grew_build.ml  grew_cli_global.ml  grew_cli_utils.ml  grew_cluster.ml  grew_config.ml  grew_corpus.ml  grew_corpusbank.ml  grew_count.ml  grew_grep.ml  grew_gtk.ml  grew_main.ml  grew_rew_display.ml  grew_status.ml  grew_transform.ml  grew_utils.ml
test/: Makefile  grew_test_utils.py
test/commands/add_node/: 01_expected.conll  01_input.conll  code.grs  graph.gr  test.py
test/commands/append_feats/: 01_expected.conll  01_input.conll  code.grs  test.py
test/commands/delete_edge_feat/: 01_expected.conll  01_input.conll  code.grs  test.py
test/commands/edge_feat_update/: 01_input.conll  02_expected.conll  02_input.conll  03_expected.conll  03_input.conll  README.md  code.grs  test.py
test/commands/manipulate_modified_edge/: 01_input.conll  01_output.conll  code.grs  expected.json  input.json  test.py
test/commands/ordering/: code.grs  expected.json  input.json  test.py
test/count/: .gitignore  01_expected.tsv  02_expected.json  02_expected.tsv  03_expected.tsv  04_expected.json  ADJ_NOUN.pat  NOUN_ADJ.pat  en_fr_zh.json  subcat.req  test.py
test/count/data/: fr_pud-ud-test.conllu  zh_pud-ud-test.conllu
test/effective_commands/: _strerr1  _strerr2  code.grs  expected.json  expected2.json  input.json  test.py
test/empty_rule/: code.grs  input.json  test.py
test/erp/: code.grs  input.conll
test/grep/: 01_expected.json  01_input.conll  02_expected.json  03_expected.json  04_expected.json  input.conll  subcat.pat  test.py
test/lexicons/pattern/: ExtPos.grs  POS.grs  POS_expected.conll  POS_input.conll  external.lex  external_expected.conll  input.conll  local_expected.conll  nap_expected.conll  test.py
test/lexicons/pattern/lex/: EXTPOS2.lex  EXTPOS3.lex  EXTPOS4.lex
test/lexicons/percent/: 01_expected.conll  01_input.conll  README.md  code.grs  test.py
test/matching/matching_complex_edges/: 01_expected.conll  02_expected.conll  03_expected.conll  04_expected.conll  05_expected.conll  06_expected.conll  code.grs  input.conll  test.py
test/strategies/iter/: 01_expected.conll  02_expected.conll  code.grs  input.gr  input.json  test.py
